Splunk/astronomy-shop/httproute-example.yaml
# Istio/Gateway API example http route 
#
# Assumes gateway called 'astro-gateway' lives in 
# the 'istio-ingress' namespace
#


apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: astro-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: astro-gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: frontend-proxy
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
